deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: "TCP"
      port: 6002
      targetPort: 5002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: hakjosh/backend:2.0
#          imagePullPolicy: Always
          ports:
            - containerPort: 5002
      imagePullSecrets:
        - name: secret

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: "TCP"
      port: 6001
      targetPort: 5001
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: hakjosh/frontend:2.0
#          imagePullPolicy: Always
          ports:
            - containerPort: 5001
      imagePullSecrets:
        - name: secret

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
spec:
  rules:
    - host: dev.sampledomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 6001
